--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,49 +12,50 @@ on:
 
 jobs:
   docker_build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         versions: [
-          { path: 'crystal', tag: 'crystal' },
-          { path: 'grpc', tag: 'grpc' },
-          { path: 'nim', tag: 'nim' },
-          { path: 'rust-protocol-buffers', base: 'rust-protocol-buffers' }
+          { dir: 'crystal', tag: 'crystal' },
+          { dir: 'grpc', tag: 'grpc' },
+          { dir: 'nim', tag: 'nim' },
+          { dir: 'rust-protocol-buffers', tag: 'rust-protocol-buffers' }
         ]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
       if: github.event_name == 'pull_request' && github.event_name != 'schedule'
-    - name: "Build  ${{ matrix.versions.tag }}"
+    - name: "Build ${{ matrix.versions.tag }}"
       if: github.event_name == 'pull_request' && github.event_name != 'schedule'
       run: |
         CUR=$(pwd) && \
-        cd ${{ matrix.versions.path }} &&
+        cd ${{ matrix.versions.dir }} && \
         IMAGRE_NAME=poad/docker-programming-lang-envs:${{ matrix.versions.tag }} && \
         docker build -t ${IMAGRE_NAME} . && \
         cd ${CUR}
 
   docker_push:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         versions: [
-          { path: 'crystal', tag: 'crystal' },
-          { path: 'grpc', tag: 'grpc' },
-          { path: 'nim', tag: 'nim' },
-          { path: 'rust-protocol-buffers', base: 'rust-protocol-buffers' }
+          { dir: 'crystal', tag: 'crystal' },
+          { dir: 'grpc', tag: 'grpc' },
+          { dir: 'nim', tag: 'nim' },
+          { dir: 'rust-protocol-buffers', tag: 'rust-protocol-buffers' }
         ]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
       if: github.event_name != 'pull_request' && github.event_name != 'schedule' && env.CHANGE_STATE != 'changed'
-    - name: Build ${{ matrix.dir_tag.tag }}
+    - name: Build ${{ matrix.versions.tag }}
       if: github.event_name != 'pull_request' && github.event_name != 'schedule' && env.CHANGE_STATE != 'changed'
       run: |
         CUR=$(pwd) && \
-        cd ${{ matrix.versions.path }} &&
+        cd ${{ matrix.versions.dir }} && \
         IMAGRE_NAME=poad/docker-programming-lang-envs:${{ matrix.versions.tag }} && \
         docker build -t ${IMAGRE_NAME} . && \
         cd ${CUR}
-  - name: Push ${{ matrix.dir_tag.tag }}
+
+    - name: Push ${{ matrix.versions.tag }}
       if: github.event_name != 'pull_request' && github.event_name != 'schedule' && env.CHANGE_STATE != 'changed'
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u poad --password-stdin && \
