--- a/nim/Dockerfile
+++ b/nim/Dockerfile
@@ -1,4 +1,5 @@
-ARG NIM_VERSION="1.0.2"
+ARG LLVM_VERSION=13
+ARG NIM_VERSION="1.4.8"
 
 FROM alpine:latest AS downloader
 
@@ -17,6 +18,7 @@ FROM poad/docker-zsh:buster
 
 LABEL maintainer="Kenji Saito<ken-yo@mbr.nifty.com>"
 
+ARG LLVM_VERSION
 ARG NIM_VERSION
 
 WORKDIR /home/zsh
@@ -29,19 +31,17 @@ USER root
 RUN apt-get update -qq \
  && apt-get install --no-install-recommends -qqy ca-certificates gnupg2 binutils apt-utils libssl-dev librocksdb-dev git \
  && cat /tmp/llvm-snapshot.gpg.key | apt-key add - \
- && echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster main" >> /etc/apt/sources.list.d/llvm-toolchain.list \
- && echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-8 main" >> /etc/apt/sources.list.d/llvm-toolchain.list \
- && echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-9 main" >> /etc/apt/sources.list.d/llvm-toolchain.list \
+ && echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-${LLVM_VERSION} main" >> /etc/apt/sources.list.d/llvm-toolchain.list \
  && apt-get update -qq \
- && apt-get install -qqy --no-install-recommends llvm-9 clang-9 lld-9 git make \
+ && apt-get install -qqy --no-install-recommends llvm-${LLVM_VERSION} clang-${LLVM_VERSION} lld-${LLVM_VERSION} git make \
  && apt-get autoremove --purge -qqy \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/* /var/log/apt/* /var/log/alternatives.log /var/log/dpkg.log /var/log/faillog /var/log/lastlog
 
-ENV CC=clang-9 \
-    CXX=clang++-9
+ENV CC=clang-${LLVM_VERSION} \
+    CXX=clang++-${LLVM_VERSION}
 
-RUN ln -s /usr/bin/clang-9 /usr/bin/gcc
+RUN ln -s /usr/bin/clang-${LLVM_VERSION} /usr/bin/gcc
 
 HEALTHCHECK CMD [ "nimble", "-version" ]
 
