--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,31 @@ name: Docker build and push
 on:
   push:
     branches:
-    - master 
+    - main 
   pull_request:
     branches:
-      - master
+      - main
   schedule:
     - cron:  '0 0 * * 2'
 
+  workflow_dispatch:
+
 jobs:
+  configure:
+    runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
+    env:
+      ACTIONS_RUNNER_DEBUG: true
+    steps:
+      - name: Enable auto merge to pull request
+        uses: poad/github-pull-request-auto-merge-enable-action@v1.0.1
+        with:
+          pull_request_number: ${{ github.event.pull_request.number }}
+          github_token: ${{ secrets.PERSONAL_TOKEN_FOR_GITHUB_ACTIONS }}
+          repository: ${{ github.event.repository.name }}
+          owner: ${{ github.repository_owner }}
+          merge_method: SQUASH
+
   docker_build:
     strategy:
       matrix:
