Fix the empty parameter

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,7 @@ on:
 jobs:
   configure:
     runs-on: ubuntu-latest
-    if: github.actor != 'dependabot[bot]'
-    env:
-      ACTIONS_RUNNER_DEBUG: true
+    if: github.actor != 'dependabot[bot]' && github.event.repository.name != '' && github.event.pull_request.number != 0
     steps:
       - name: Enable auto merge to pull request
         uses: poad/github-pull-request-auto-merge-enable-action@v1.0.2
