--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -3,6 +3,10 @@ name: dependabot-auto-merge
 on:
   pull_request_target:
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
@@ -19,7 +23,7 @@ jobs:
 
       - name: Slack Notification (not success)
         uses: lazy-actions/slatify@master
-        if: "! success()"
+        if: ${{ ! success() }}
         continue-on-error: true
         with:
           job_name: '*auto-merge*'
