--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,17 @@ on:
   push:
     branches:
     - main 
-  pull_request:
+  pull_request_target:
     branches:
       - main
   schedule:
     - cron:  '0 0 * * 2'
 
   workflow_dispatch:
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   configure:
